set and get extension settings to and from chrome storage

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -6,7 +6,8 @@
 	"permissions": 
 	[
 		"http://steamcommunity.com/",
-		"http://store.steampowered.com/"
+		"http://store.steampowered.com/",
+		"storage"
 	],
 	"browser_action":
 	{
